<resources>
    <string name="app_name" translatable="false">My Todo App</string>
    <string name="login">Login</string>
    <string name="email">E Mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgetpass">Forget Pass</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="myprofile">My Profile</string>
    <string name="signout">Sign Out</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="calender">Calender</string>
    <string name="update">Update</string>
</resources>
