<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/linearpadding"
    tools:context="com.mstztrk.j10_10mytodoapp.LoginActivity">

    <ImageView
        android:layout_width="@dimen/imglogo"
        android:layout_height="@dimen/imglogo"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/register_txtEmail"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_txtPassword"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_btnRegister"
        style="@style/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <Button
        android:id="@+id/register_btnLogin"
        style="@style/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />


</LinearLayout>
