<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/linearpadding"
    tools:context="com.mstztrk.j10_10mytodoapp.ProfileActivity">

    <ImageView
        android:id="@+id/profile_imgProfile"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_width="@dimen/pphoto"
        android:layout_height="@dimen/pphoto"
        android:layout_marginBottom="@dimen/fab_margin"
        android:scaleType="fitXY" />

    <EditText
        android:id="@+id/profile_txtName"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/profile_txtSurName"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/profile_txtEmail"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/profile_birthdate"
            style="@style/EditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/profile_btnCalender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/calender"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/profile_btnUpdate"
        style="@style/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update" />
</LinearLayout>
